syntax = "proto3";

package mall.rpc.balance;

option go_package = "/;pb";

service Balance {
  // 获取余额
  rpc GetBalance(GetBalanceRequest) returns(GetBalanceResponse) {}
  // 增加余额
  rpc SubBalance(SubBalanceRequest) returns(SubBalanceResponse) {}
  // 减少余额
  rpc ReduceBalance(ReduceBalanceRequest) returns(ReduceBalanceResponse) {}
  // 增加冻结余额
  rpc SubFrozenBalance(SubFrozenBalanceRequest) returns(SubFrozenBalanceResponse) {}
  // 减少冻结余额
  rpc ReduceFrozenBalance(ReduceFrozenBalanceRequest) returns(ReduceFrozenBalanceResponse) {}
  // 余额变动记录
  rpc GetBalanceChangeList(GetBalanceChangeListRequest) returns(GetBalanceChangeListResponse) {}
}

message GetBalanceRequest {
  int64 user_id = 1; // 用户id 商户id
  int32 type = 2; // 1 用户 2 商户
}

message GetBalanceResponse {
  int64 id = 1;
  int64 user_id = 2;
  int32 type = 3;
  uint64 available = 4;
  uint64 frozen = 5;
}

message SubBalanceRequest {
  int64 id = 1;
  uint64 amount = 2;
  string desc = 3;
}

message SubBalanceResponse {
  bool status = 1;
}

message ReduceBalanceRequest {
  int64 id = 1;
  uint64 amount = 2;
  string desc = 3;
}

message ReduceBalanceResponse {
  bool status = 1;
}

message SubFrozenBalanceRequest {
  int64 id = 1;
  uint64 amount = 2;
  string desc = 3;
}

message SubFrozenBalanceResponse {
  bool status = 1;
}

message ReduceFrozenBalanceRequest {
  int64 id = 1;
  uint64 amount = 2;
  string desc = 3;
}

message ReduceFrozenBalanceResponse {
  bool status = 1;
}

message GetBalanceChangeListRequest {
  int64 id = 1;
  int32 type = 2;
  int32 type_amount = 3;
  int32 page = 4;
  int32 page_size = 5;
}

message GetBalanceChangeListResponse {
  repeated GetBalanceChangeListResponseList list = 1;
  int64 total_count = 2;
  int64 total_page = 3;
}

message GetBalanceChangeListResponseList {
  int64 id = 1;
  int64 amount = 2;
  int64 before_amount = 3;
  int64 after_amount = 4;
  int32 type = 5;
  int32 type_amount = 6;
  string created_at = 7;
}